<resources>
    <string name="app_name">Mad Expenses</string>
    <string name="title_activity_main">Mad Expenses</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_expenses">Expenses</string>
    <string name="tab_proposals">Proposals</string>
    <string name="personal_balance">Personal balance</string>
    <string name="credit">Credit</string>
    <string name="debit">Debt</string>
    <string name="summary">Summary</string>
    <string name="total">Total</string>
    <string name="title_activity_login">Sign in</string>
    <string name="group_name">Group name</string>
    <string name="group_members">Group members</string>
    <string name="group_structure">Group structure:</string>
    <string name="centralized">Centralized</string>
    <string name="distributed">Distributed</string>
    <string name="centralized_description">In a centralized group there is a single member who takes decisions for all of the members of the group. Other members can make expenses, create proposals and open topics but only the authority of the group can accept or refuse them.</string>
    <string name="distributed_description">In a distributed group all of its members can insert or dispute expenses, create, accept or refuse proposals, and open topics</string>
    <string name="search_person">Search person</string>
    <string name="create_new_group">Create the group</string>
    <string name="group_creation">Insert the group name and, optionally, an image.</string>
    <string name="expense_name">Expense name</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="create_new_expense">Create a new expense</string>
    <string name="add_expense_image">Add a proof of the expense</string>
    <string name="create_expense_button">Create expense</string>
    <string name="select_contributors">Who is paying?</string>
    <string name="select_exluded">Who does not take part?</string>
    <string name="select_contributors_description">Select the people who already paid for the expense:</string>
    <string name="select_excluded_description">Exclude the people who isn\'t participating to the expense:</string>
    <string name="expense_name_suggestion"><i>e.g: Hotel room</i></string>
    <string name="expense_description_suggestion"><i>e.g: Double room, two nights</i></string>
    <string name="expense_cost_suggestion"><i>e.g: 23</i></string>
    <string name="currency">Currency</string>
    <string name="expense_currency_suggestion"><i>e.g: US$</i></string>
    <string name="invalid_currency_string">Currency not valid</string>
    <string name="category">Category: </string>
    <string name="select_category_description">Select the category of the expense:</string>
    <string name="proposal_name">Proposal name</string>
    <string name="create_new_proposal">Create a new proposal</string>
    <string name="add_proposal_image">Add an image to the proposal</string>
    <string name="create_proposal_button">Create proposal</string>
    <string name="debits_and_credits">Debts and credits</string>
    <string name="mandatory_field">Mandatory Field!</string>
    <string name="invalid_cost_field">Invalid Field!</string>
    <string name="welcome">Welcome in Mad Expenses!</string>
    <string name="username_choose">Choose an username</string>
    <string name="password">Choose a password</string>
    <string name="email">Enter your e-mail</string>
    <string name="profile_image">Choose your profile image</string>
    <string name="auth_failed">Authentication failed!</string>
    <string name="or">Or</string>
    <string name="new_here_sign_up">New here? Sign Up!</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="username">Username</string>
    <string name="changename">Edit Displayed Name</string>
    <string name="changeemail">Edit Account Email</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="currencies_spinner_prompt">Select the default currency to use when displaying costs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noConnectionDesc">Your internet connection is disabled. Open settings to enable Mobile or wifi internet connection.</string>
    <string name="openSettings">Connect</string>
    <string name="noConnectionSnack">Offline mode</string>
    <string name="invitation_title">Add friends</string>
    <string name="invitation_message">Join the Group of MadExpenses and start sharing!</string>
    <string name="invitation_deep_link">addPersonToGroup</string>
    <string name="invitation_cta">Join the Group!</string>
    <string name="no_group_found">No group found!</string>
    <string name="youre_not_part_of_any_group">You are not part of any group! :(</string>
    <string name="dialog_camera_or_gallery">Select image source</string>
    <string name="no_credit_and_debt">You have no credits or debts</string>
    <string name="group_and_credit">Credit: </string>
    <string name="group_debt">Debt: </string>
    <string name="noproposals">No proposals associated with the group :(</string>
    <string name="noexpenses">No expenses associated with the group :(</string>
    <string name="progressDialogText">Adding new expense</string>
    <string name="progressDialogTextAddGroup">Adding new group</string>
    <string name="continue_string">Continue</string>
    <string name="add_person">Add person</string>
    <string name="notifications">Notifications</string>
    <string name="confirmExpenseDeletion">Are you sure you want to delete the expense?</string>
    <string name="yes">Yes</string>
    <string name="modify_expense">Modify expense</string>
    <string name="delete_expense">Delete expense</string>
    <string name="menu_up_as_back">up_as_back</string>
    <string name="modify_group_name">Modify group name</string>
    <string name="modify_debt_value">Modify debt value</string>
    <string name="cannot_modify_non_creditor">You cannot modify the value of a debt if you are not the creditor</string>
    <string name="no_image">No image</string>
    <string name="view_topic">View related topic</string>
    <string name="loading_text">Loading&#8230;</string>
    <string name="confirmProposalVoteAccept">Are you sure you want to accept the proposal?</string>
    <string name="confirmProposalVoteExclude">Are you sure you want to exclude yourself from the proposal?</string>
    <string name="confirmProposalVoteDeny">Are you sure you want to reject te proposal?</string>
    <string name="acceptedBy">Accepted by:</string>
    <string name="refusedBy">Refused by:</string>
    <string name="nobody">Nobody</string>
    <string name="accept">Accept</string>
    <string name="deny">Refuse</string>
    <string name="waitingFor">Waiting for:</string>
    <string name="transformInExpense">Transform in expense</string>
    <string name="loading_image">Loading image&#8230;</string>
    <string name="modify_proposal">Edit the proposal</string>
    <string name="delete_proposal">Delete the proposal</string>
    <string name="confirm_proposal_deletion">Are you sure you want to delete the proposal?</string>
    <string name="transport">Transports</string>
    <string name="rent">Rent</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="shopping">Shopping</string>
    <string name="other">Other</string>
    <string name="chartviewSpinnerPrompt">Choose the view:</string>
    <string name="allreadyMembers">You are already in this group!</string>
    <string name="slogan">Sharing expenses has never been so easy!</string>
    <string name="confirmLeaveGroupTitle">Confirm group abandon</string>
    <string name="confirmLeaveGroup">Are you sure you want to leave the group?</string>
    <string name="no">No</string>
    <string name="confirmDebtExtinctionTitle">Confirm credit extinction</string>
    <string name="confirmDebtExtinction">Do you want to extinguish this credit?</string>
    <string name="cannotExtinguish">Unable to extinguish a debt</string>
    <string name="typeMessage">Type message</string>
    <string name="groupName">Group Name</string>
    <string name="groupCreate">Create a group</string>
    <string name="notififcationAddExpenseActivity">ExpenseDetailsActivity</string>
    <string name="notififcationAddExpenseText"> added a new expense.</string>
    <string name="notififcationAddExpenseFromProposalActivity">ExpenseFromProposalDetailsActivity</string>
    <string name="notififcationAddExpenseFromProposalText"> added a new expense from proposal.</string>
    <string name="notififcationAddProposalActivity">ProposalDetailsActivity</string>
    <string name="notififcationAddProposalText"> added a new proposal.</string>
    <string name="notififcationAddGroupActivity">GroupInfoActivity</string>
    <string name="notififcationAddGroupText"> created the group.</string>
    <string name="notififcationAddMembersToGroupActivity">GroupInfoActivityJoined</string>
    <string name="notififcationAddMembersToGroupText"> joined the group.</string>
    <string name="notififcationRemoveMembersToGroupActivity">GroupInfoActivityLeft</string>
    <string name="notififcationRemoveMembersToGroupText"> left the group.</string>
    <string name="notififcationAcceptedProposalActivity">ProposalDetailsActivityAccepted</string>
    <string name="notififcationAcceptedProposalText"> accepted the proposal.</string>
    <string name="notififcationDenyProposalActivity">ProposalDetailsActivityDenied</string>
    <string name="notififcationDenyProposalText"> denied the proposal.</string>
    <string name="notififcationDenyPayedDebtActivity">GroupActivityDebtPayed</string>
    <string name="notififcationDenyPayedDebtText"> extinct a debt.</string>
    <string name="notififcationChangedExpenseBalancectivity">ExpenseDetailsActivityChangedBalance</string>
    <string name="notififcationChangedExpenseBalanceText"> change the expense debt.</string>
    <string name="notififcationTopicNewMessageActivity">TopicActivityNewMessage</string>
    <string name="notififcationTopicNewMessageText"> sent a new message.</string>
    <string name="notififcationModifiedExpenseActivity">ModifiedExpense</string>
    <string name="notififcationModifiedExpenseText"> modified an expense.</string>
    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">Jun</string>
    <string name="july">Jul</string>
    <string name="august">Aug</string>
    <string name="september">Sep</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>
    <string name="got_it">Got it!</string>
    <string name="new_group_add_members">You\'ve created a new group</string>
    <string name="add_new_members_hint">Start adding members to your new group</string>
    <string name="no_group">You don\'t have any group</string>
    <string name="add_group_hint">Create a new group now</string>
    <string name="invalid_email">Invalid email</string>
    <string name="view_history">View history</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce semper convallis diam, non porta sem feugiat et. Curabitur iaculis vestibulum arcu, non tincidunt tortor blandit a. Nam sit amet lacus vitae quam rutrum rutrum ac eget nulla. Vivamus ac leo eget lorem mattis euismod.</string>
</resources>