<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.polito.mad.team19.mad_expenses.GroupActivity">


    <item
        android:id="@+id/person_add"
        android:icon="@drawable/ic_group_add"
        android:title="@string/add_person"
        app:showAsAction="always" />

    <item
        android:id="@+id/personal_profile_icon"
        android:icon="@drawable/ic_person"
        android:title="@string/personal_balance"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/notifications_icon"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications"
        app:actionLayout="@layout/notifications_ab_layout"
        app:showAsAction="always" />

</menu>
