<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <fragment
        class="it.polito.mad.team19.mad_expenses.ContactsListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/contactlist_fragment"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/select_group_image_button"
            android:text=""
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/group_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/group_name"
                android:inputType="text"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:text="@string/group_structure"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/normal_text_size"
    />

    <RadioGroup
        android:id="@+id/radio_group_structure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_centralized"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/centralized"
            android:textSize="@dimen/normal_text_size"/>

        <RadioButton
            android:id="@+id/radio_distributed"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/distributed"
            android:textSize="@dimen/normal_text_size"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/group_members"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/normal_text_size" />

    <ListView
        android:id="@+id/members_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

</LinearLayout>

