<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/not_container"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/primaryText"
            android:text="@string/username"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/notification_text"
        android:text="@string/lorem"
        android:textSize="14sp"
        android:textColor="@color/secondaryText"/>

    </LinearLayout>
    <LinearLayout
        android:layout_weight="5"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/notification_date"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/date"
            android:textSize="12sp"
            android:textColor="@color/primaryText"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/notification_time"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/date"
            android:textSize="12sp"
            android:textColor="@color/primaryText"/>
        </LinearLayout>

</LinearLayout>