<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activitiesBackgroundColor"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/new_proposal_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="@dimen/smaller_horizontal_margin"
            android:layout_marginStart="@dimen/smaller_horizontal_margin"
            android:padding="@dimen/smaller_horizontal_margin">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/new_proposal_lin_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/new_proposal_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proposal_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/titles_size" />

                <EditText
                    android:id="@+id/new_proposal_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/smaller_vertical_margin"
                    android:hint="@string/expense_name_suggestion"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/big_titles_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/new_proposal_imageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/smaller_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_circle_camera" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/smaller_horizontal_margin"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/new_proposal_description_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/new_proposal_description_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/expense_description_suggestion"
                            android:inputType="textCapSentences"
                            android:maxLines="10"
                            android:paddingLeft="@dimen/activity_horizontal_margin"
                            android:textSize="@dimen/normal_text_size" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/new_proposal_price_tv"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.4"
                                android:text="@string/price"
                                android:textColor="@color/colorPrimary"
                                android:textSize="18sp" />

                            <EditText
                                android:id="@+id/new_proposal_cost_et"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.85"
                                android:hint="@string/expense_cost_suggestion"
                                android:inputType="numberDecimal"
                                android:maxLines="1"
                                android:paddingEnd="@dimen/activity_horizontal_margin"
                                android:paddingStart="@dimen/activity_horizontal_margin"
                                android:textAlignment="textEnd" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="40dp">

                            <TextView
                                android:id="@+id/new_proposal_currency"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/currency"
                                android:textColor="@color/colorPrimary"
                                android:textSize="18sp" />

                            <AutoCompleteTextView
                                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                                android:id="@+id/new_proposal_currency_actv"
                                android:completionThreshold="1"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:hint="@string/expense_currency_suggestion"
                                android:inputType="textPhonetic"
                                android:maxLines="1"
                                android:paddingEnd="@dimen/activity_horizontal_margin"
                                android:paddingStart="@dimen/activity_horizontal_margin"
                                android:textAlignment="textEnd"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/new_proposal_done_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/new_proposal_card"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:padding="@dimen/fab_margin"
            android:src="@drawable/ic_check"
            app:layout_anchor="@id/new_proposal_lin_layout"
            app:layout_anchorGravity="bottom|right" />

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>